# sc_3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  knapsack.cxx  knapsack.h  knapsack_solver.cxx  knapsack_solver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cxx
lib/: CMakeLists.txt  knapsack.cxx  knapsack.h
